--- a/jamboyww.plist
+++ b/jamboyww.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>http://192.168.2.70:80/apps/jywcq1008.ipa</string>
+                                        <string>http://192.168.2.70:80/apps/jamboyww.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
